[tool.poetry]
name = "zarena"
version = "0.1.0"
description = ""
authors = ["Z <matthew@zeti.dev>"]

[tool.poetry.dependencies]
python = "^3.7"
maturin = "0.10.4"
numpy = "^1.21.1"
gym = "^0.21.0"
six = "^1.16.0"
gy = "^1.0.2"
Pillow = "^8.4.0"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"

[build-system]
requires = ["maturin"]
build-backend = "maturin"
