[tool.poetry]
name = "zarena"
version = "0.1.0"
description = ""
authors = ["zetiworld <zetiapp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.21.1"
gym = "^0.21.0"
six = "^1.16.0"
gy = "^1.0.2"
Pillow = "^8.4.0"
tqdm = "^4.62.3"
maturin = "^0.12.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"

[project]
name = "zarena"
version="0.1.0"
description= "Rust Game Collection with Reninforcement Learning gym environments. This library aims to serve the same purpose as OpenSpiel, except in Rust to make it easier to use & maintain. The current games are gato, blackjack, chess & poker texas hold'em. All of these additionally support Web Assembly. You can play gato & chess against our Artificial Intelligence at Zeti Games"
long_description= "README.rst"
requires-python = ">=3.6"
authors =[
    {email = 'zetiapp@gmail.com'},
    {name = 'zetiworld'}
] 
keywords = ["rust", "performance", "games", "wasm", "gym-environments", "gyms", "maturin"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows"
]
dependencies = [
    "numpy>=1,<2",
    "gym>=0,<1",
    "six>=1,<2",
    "gy>=1,<2",
    "Pillow>=8,<9",
    "tqdm>=4,<5"
]

[project.urls]
repository = "https://github.com/ZetiAi/zarena"

[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"
