[tool.poetry]
name = "blackjack"
version = "0.2.0"
description = ""
authors = ["Z <Z@zeti.dev>"]

[tool.poetry.dependencies]
python = "^3.7.11"
maturin = "0.10.4"
torch = "^1.8.1"
numpy = "^1.20.3"
gym = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"

[build-system]
requires = ["maturin"]
build-backend = "maturin"
