[tool.poetry]
name = "chess"
version = "0.4.0"
description = ""
authors = ["Z <matthew@zeti.dev>"]

[tool.poetry.dependencies]
python = "3.7.11"
maturin = "0.10.4"
numpy = "^1.21.1"
gym = "^0.18.3"
six = "^1.16.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"

[build-system]
requires = ["maturin"]
build-backend = "maturin"
