[package]
name = "gym_gato"
version = "0.2.0"
authors = ["Z <Z@zeti.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gym_gato"
crate-type = ["cdylib"]

[package.metadata.maturin]
requires-dist = ["gym>=0,<1", "numpy>=1,<2", "six>=1,<2"]

[dependencies]
lazy_static = "1.4.0"
itertools = "0.10.1"

[dependencies.pyo3]
version = "0.13.0"

[features]
default = ["pyo3/extension-module"]
