[tool.poetry]
name = "gato"
version = "0.2.0"
description = "The game of X's and O's"
authors = ["Z <Z@zeti.dev>"]

[tool.poetry.dependencies]
python = "3.7.11"
maturin = "0.10.4"
numpy = "^1.21.1"
gym = "^0.18.3"
six = "^1.16.0"
Pillow = "^8.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"

[build-system]
requires = ["maturin"]
build-backend = "maturin"
