[tool.poetry]
name = "poker"
version = "0.1.0"
description = ""
authors = ["Z <Z@zeti.dev>"]

[tool.poetry.dependencies]
python = "3.7.11"
maturin = "0.10.4"
gym = "^0.18.3"
gym-poker = {path = "target/wheels/gym_poker-0.1.0.tar.gz"}
Pillow = "^8.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"

[build-system]
requires = ["maturin"]
build-backend = "maturin"
